2011-06-20  Jan Djärv  <jan.h.d@swipnet.se>

	* x-dnd.el (x-dnd-version-from-flags)
	(x-dnd-more-than-3-from-flags): New functions that handle long-as-cons
	and long as number (Bug#8899).
	(x-dnd-handle-xdnd): Call functions above (Bug#8899).

2011-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-metadata): Prepend the alist with `metadata'.
	(completion-try-completion, completion-all-completions): Compute the
	metadata argument if it's missing; make it optional (bug#8795).

	* wid-edit.el: Use lexical scoping and move towards completion-at-point.
	(widget-complete): Use new :completion-function property.
	(widget-completions-at-point): New function.
	(default): Use :completion-function instead of :complete.
	(widget-default-completions): Rename from widget-default-complete, rewrite.
	(widget-string-complete, widget-file-complete, widget-color-complete):
	Remove functions.
	(file, symbol, function, variable, coding-system, color):
	* international/mule-cmds.el (default-input-method, charset)
	(language-info-custom-alist):
	* cus-edit.el (face): Use new property :completions.

	* progmodes/pascal.el (pascal-completions-at-point): New function.
	(pascal-mode): Use it.
	(pascal-mode-map): Use completion-at-point.
	(pascal-toggle-completions): Make obsolete.
	(pascal-complete-word, pascal-show-completions):
	* progmodes/octave-mod.el (octave-complete-symbol):
	Redefine as obsolete alias.
	* progmodes/octave-inf.el (inferior-octave-completion-at-point):
	Signal absence of completion info for old Octave,
	(inferior-octave-complete): Redefine as obsolete alias.
	* progmodes/meta-mode.el: Use lexical-binding and completion-at-point.
	(meta-completions-at-point): Rename from meta-complete-symbol and
	adapt it for use on completion-at-point-functions.
	(meta-common-mode): Use it.
	(meta-looking-at-backward, meta-match-buffer): Remove.
	(meta-complete-symbol): Redefine as obsolete alias.
	(meta-common-mode-map): Use completion-at-point.